# laboGrafica

./: .gitignore
Translate2D/: CMakeLists.txt  README.md
Translate2D/shaders/: vertex_shader.glsl
Translate2D/src/: main.cpp
labo6/Translate2D/: README.md
labo6/Translate2D/documentacion/: informe.aux  informe.out  informe.tex
labo6/Translate2D/shaders/: fragment_shader.glsl
labo6/Translate2D/src/: main.cpp
labo7/: CMakeLists.txt  README.md
labo7/documentacion/: infomelobo7.aux  infomelobo7.out  infomelobo7.tex
labo7/src/: actividadCirculo.cpp  actividadRectangulo.cpp  escalamiento.cpp  rotacion.cpp
labo9/: CMakeLists.txt  README.md  actividadLetraE.cpp  glcommon.hpp  shearing.cpp
labo9/infome/: informe.tex
lobo8/: CMakeLists.txt  README.md
lobo8/infome/: informe.tex
lobo8/src/: actividadPentagono.cpp  actividadTriangulo.cpp  gl_common.hpp  reflexion.cpp
